--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
 
 .container{
     max-width: 1170px;
+    padding: 0 20px;
     margin: 0 auto;
 }
 
@@ -43,6 +44,10 @@
     justify-content: space-around;
 }
 
+.justify-between{
+    justify-content: space-between;
+}
+
 .text-center{
     text-align: center;
 }
@@ -59,6 +64,11 @@ header{
     padding: 5px 10px;
 }
 
+#score{
+    font-size: 2rem;
+    font-weight: bold;
+}
+
 /* MAIN ----------------------------------------- */
 
 main{
@@ -66,9 +76,17 @@ main{
 }
 
 .slot{
-    padding: 10px;
+    min-width: 40px;
+    min-height: 40px;
     border: 2px solid var(--number-border);
     box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.5)
+}
+
+.number{
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
 }
 
 .found{
